# models/validation/val-library.js
@@ -4,31 +4,23 @@ const joi = require('joi');
 // --------------------- Objetos Locais --------------------- //
 const keys = {
     '_id': joi.string().regex(/^[0-9a-fA-F]{24}$/),
-    'platform': joi.string().trim().valid('PS4', 'PS3', 'XBOXONE', 'XBOX360', 'NINTENDOSWITCH', 'NINTENDO3DS'),
-    'game': joi.string().regex(/^[0-9a-fA-F]{24}$/),
-    'owner': joi.string().regex(/^[0-9a-fA-F]{24}$/),
-    'createdAt': joi.date().raw(),
-    'updatedAt': joi.date().raw(),
+    'title': joi.string().trim(),
+    'createdBy': joi.string().regex(/^[0-9a-fA-F]{24}$/),
+    'mediaId': joi.string().regex(/^[0-9a-fA-F]{24}$/),
+    'mediaOwner': joi.string().regex(/^[0-9a-fA-F]{24}$/),
+    'mediaPlatform': joi.string().trim().valid('PS4', 'PS3', 'XBOXONE', 'XBOX360', 'NINTENDOSWITCH', 'NINTENDO3DS'),
     'page': joi.number().default(0),
     'limit': joi.number().default(10).max(100)
 };
 
 // ------------------- Funções Exportadas ------------------- //
-const create = joi.object().options({ abortEarly: false, stripUnknown: true }).keys({
-    'platform': keys.platform.required(),
-    'game': keys.game.required()
-});
-
-const update = joi.object().options({ abortEarly: false, stripUnknown: true }).keys({
-    'platform': keys.platform.required(),
-    'game': keys.game.required()
-});
-
 const search = joi.object().options({ abortEarly: false, stripUnknown: true }).keys({
     '_id': keys._id.optional(),
-    'platform': keys.platform.optional(),
-    'game': keys.game.optional(),
-    'owner': keys.owner.optional(),
+    'title': keys.title.optional(),
+    'createdBy': keys.createdBy.optional(),
+    'mediaId': keys.mediaId.optional(),
+    'mediaOwner': keys.mediaOwner.optional(),
+    'mediaPlatform': keys.mediaPlatform.optional(),
     'page': keys.page,
     'limit': keys.limit
 });
@@ -39,8 +31,6 @@ const id = joi.object().options({ abortEarly: false, stripUnknown: true }).keys(
 
 // --------------------- Module Exports --------------------- //
 module.exports = {
-    'create': create,
     'id': id,
-    'update': update,
     'search': search
 };
